--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,57 +8,53 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="399dp"
-        android:layout_height="28dp"
+        android:layout_width="344dp"
+        android:layout_height="30dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="11dp"
         android:clickable="false"
         android:linksClickable="false"
         android:text="@string/la_tua_prossima_avventura_inizia_ora"
-        android:textSize="20sp"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:textAlignment="center" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="336dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="11dp"
+        android:layout_width="326dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="45dp"
         android:text="@string/crea_i_tuoi_itinerari_e_vivi_nuove_esperienze"
         android:textAlignment="center"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="151dp"
-        android:layout_height="146dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="57dp"
-        android:contentDescription="@string/logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="232dp"
         android:layout_height="49dp"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="53dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="64dp"
         android:text="@string/crea_il_tuo_account"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="183dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="32dp"
         android:text="@string/oppure"
         android:textSize="16sp"
         android:textStyle="italic"
@@ -89,11 +85,33 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="43dp"
+        android:layout_height="20dp"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="35dp"
+        android:clickable="true"
+        android:linksClickable="false"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:text="@string/accedi"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5" />
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        tools:ignore="TouchTargetSizeCheck"
+        android:focusable="true" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="187dp"
+        android:layout_height="183dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginBottom="64dp"
+        android:contentDescription="@string/samplelogo"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/travel_itinerary" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
