--- a/app/src/main/res/layout/fragment_schermata_home.xml
+++ b/app/src/main/res/layout/fragment_schermata_home.xml
@@ -32,5 +32,14 @@
             tools:layout_editor_absoluteX="61dp"
             tools:layout_editor_absoluteY="211dp" />
 
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Switch"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="255dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
