Lavoro su navigazione aggiornata

--- a/app/src/main/res/layout/fragment_schermata_accesso.xml
+++ b/app/src/main/res/layout/fragment_schermata_accesso.xml
@@ -7,15 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".SchermataAccesso">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Schermata di accesso"
+        android:textSize="30dp"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="294dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
